--- a/cdf/pom.xml
+++ b/cdf/pom.xml
@@ -89,5 +89,12 @@
             <url>http://repo.spring.io/libs-release</url>
         </repository>
 	</repositories>  -->
-
+     <build>
+          <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+       </plugins>
+    </build>
 </project>
